# census-search

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMMERCIAL_LICENSE.md  LICENSE  Makefile  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml  publish.yml
ai-prompts/: create-pr.md  debug-no-results.md  github-best-practice.md  new-feature.md  trace-ancestor.md
census_search/: __init__.py  __main__.py  cli.py  linker.py  models.py  phonetic.py
census_search/searchers/: __init__.py  base.py  census_1821_1851.py  census_1901_1911.py  census_1926.py  war_office.py
stubs/playwright/async_api/: __init__.py
stubs/pydantic/: __init__.py
stubs/rich/: __init__.py  box.py  console.py  panel.py  table.py  text.py
stubs/typer/: __init__.py  testing.py
tests/: conftest.py  test_cli.py  test_deeper_search.py  test_linker.py  test_models.py  test_phonetic.py  test_searchers.py
