[tool.poetry]
name = "census-search"
version = "0.5.0"
description = "Recursive search of Irish National Archives census records (1926, 1911, 1901)"
authors = ["Paul Gilligan <meltingturret@gmail.com>"]
readme = "README.md"
packages = [{include = "census_search"}]

[tool.poetry.dependencies]
python = "^3.12"
typer = {version = ">=0.26", extras = ["all"]}
playwright = "^1.44"
httpx = "^0.27"
rich = "^13"
pydantic = "^2"
click = ">=8.1,<8.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-asyncio = "^0.23"
ruff = "^0.15.15"

[tool.poetry.scripts]
census-search = "census_search.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
exclude = ["stubs/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
