[project]
name = "census-search"
version = "0.6.0"
description = "CLI tool for tracing individuals across Irish National Archives census records (1926, 1911, 1901, 1851, 1841, 1831, 1821)"
authors = [
    {name = "Joe Corrigan", email = "meltingturret@gmail.com"}
]
license = "LicenseRef-Polyform-Small-Business-1.0.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12"
keywords = ["ireland", "census", "genealogy", "national-archives", "family-history"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "typer[all]>=0.26",
    "playwright>=1.44",
    "httpx>=0.27",
    "rich>=13",
    "pydantic>=2",
    "click>=8.1,<8.4",
]

[project.urls]
Repository = "https://github.com/meltingturret/census-search"

[project.scripts]
census-search = "census_search.cli:app"

[tool.poetry]
packages = [{include = "census_search"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-asyncio = "^0.23"
ruff = "^0.15.15"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
exclude = ["stubs/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
